# catalog-plotter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
catfiles/: bns.cat  gwtc4.cat
docs/: api.rst  catplot.plotting.rst  conf.py  index.rst  usage.rst
python/catplot/: analysis.py  asimov.py  binning.py  cli.py  colour.py  data.py  io.py  latex.py  plotting.py  types.py
sandbox/: make-catalog-file.py
tests/: test_credible_region.py
